<?php
declare(strict_types=1);

namespace Main\Administration;

use Main\Singleton;
/** ***********************************************************************************************
 * Administration class, administration entrance point
 *
 * @package exchange_administration
 * @method  static Administration getInstance
 * @author  Hvorostenko
 * TODO
 *************************************************************************************************/
class Administration
{
    use Singleton;

    public function run() : void
    {

    }
}