<?php
declare(strict_types=1);

namespace Main\API;

use Main\Singleton;
/** ***********************************************************************************************
 * API class, API entrance point
 *
 * @package exchange_api
 * @method  static API getInstance
 * @author  Hvorostenko
 * TODO
 *************************************************************************************************/
class API
{
    use Singleton;

    public function run() : void
    {

    }
}